Add last PR + change logo and color
Signed-off-by: johmau <johmau@obspher.com>

--- a/devpi_semantic_ui/static/devpi-semantic.css
+++ b/devpi_semantic_ui/static/devpi-semantic.css
@@ -12,6 +12,10 @@ body {
     width: 100%;
 }
 
+header {
+    background: linear-gradient(#feca38, #ffe771);
+}
+
 .ui.category.search > .results .category > .name {
     width: 180px;
     padding: .8em 1em;
