--- a/devpi_semantic_ui/static/devpi-semantic.css
+++ b/devpi_semantic_ui/static/devpi-semantic.css
@@ -4,16 +4,18 @@ body {
     flex-direction: column;
 }
 
+#header_logo_container {
+    padding-top: 0.6em;
+    padding-bottom: 0.6em;
+    font-size: large;
+}
+
 .fixed.menu .item img.logo {
     margin-right: 1.5em;
 }
 
 .fixed.menu form.search {
     width: 100%;
-}
-
-header {
-    background: linear-gradient(#feca38, #ffe771);
 }
 
 .ui.category.search > .results .category > .name {
@@ -37,7 +39,7 @@ header {
 }
 
 .footer.segment {
-    padding: 5em 0em;
+    padding: 3em 0em;
 }
 
 td.toxresults .mini.ui.button {
